# giraff_ros_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
firmware/: controller.upl
include/giraff_ros_driver/: giraff_manager.h  giraff_serial.h
msg/: Pilot.msg  Stalk.msg  StalkRef.msg  avr_comms.msg  cmd_vel_avr.msg
src/: giraff_node.cpp  giraff_teleop_joy.cpp
